Test message list in request externally unmodifiable